--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/lidiannerb/Barbearia-Alura.git"
+    "url": "git//github.com/lidiannerb/Barbearia-Alura.git"
   },
   "author": "",
   "license": "ISC",
